--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,10 +1,6 @@
 @import "../../vars.css";
 
 .container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-top: 50px;
   z-index: 1;
   margin-left: 10%;
@@ -19,14 +15,43 @@
   z-index: 1;
 }
 
+/* hero */
 .title {
   font-size: 72px;
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
-  background: linear-gradient(90deg (255, 255, 255, 1) 70%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 0) 120%
+  );
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
+.description {
+  font-size: 30px;
+  font-family: var(--font-roboto);
+  margin-bottom: 52px;
+  color: var(--color-text);
 }
 
 .heroImg {
-  border-radius: 50%;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 10px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
 }
