--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,10 +1,13 @@
 @import "../../vars.css";
 
-.container {
-  margin-top: 50px;
-  z-index: 1;
-  margin-left: 10%;
-  margin-right: 10%;
+.body {
+  background-color: var(--color-dark);
+  color: var(--color-text);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center; /* Horizontally center the container */
+  align-items: center; /* Vertically center the container */
 }
 
 .content {
