amended home page

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,7 +1,20 @@
 @import "../../vars.css";
 
+.background {
+  background-image: url("path/to/your/background-image.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 .body {
-  background-color: var(--color-dark);
+  background-image: linear-gradient(
+      rgba(22, 33, 49, 0.736),
+      rgba(26, 24, 24, 0.9),
+      rgba(36, 36, 36, 0.7)
+    ),
+    url("../../assets/matrixbackground.jpg");
+  background-size: cover;
+  background-position: center;
   color: var(--color-text);
   height: 100vh;
   width: 100%;
