--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -48,7 +48,7 @@
   color: #16c9fb;
 }
 
-.heroImg {
+.heroImg:hover {
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -60,7 +60,7 @@
     transform: translate(0, 0px);
   }
   50% {
-    transform: translate(0, 10px);
+    transform: translate(0, 8px);
   }
   100% {
     transform: translate(0, -0px);
