--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,1 +1,35 @@
 @import "../../vars.css";
+
+.title {
+  font-weight: 900;
+}
+
+.projectCard {
+  /* Other styles for the card */
+}
+
+.imageContainer {
+  width: 100%;
+  height: 300px; /* Set a fixed height for the container */
+  overflow: hidden; /* Hide overflow */
+}
+
+.projectImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* transition: transform 0.3s ease; */
+}
+
+/* .projectImage:hover {
+  transform: scale(1.01); 
+} */
+
+.projectCard {
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transition for smooth effect */
+}
+
+.projectCard:hover {
+  transform: scale(1.01); /* Scale up slightly on hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.314); /* Add shadow on hover */
+}
